<resources>
    <string name="app_name">AssignmentP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dashboard">Dashboard</string>
    <string name="product">Product</string>
    <string name="order">Order</string>
    <string name="category">Category</string>
    <string name="logout">Logout</string>

    <string name="email_id">Email Id</string>
    <string name="password">Password</string>


    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>