<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_card_giftcard_24"
            android:title="@string/product" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout" />
    </group>
</menu>