<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.p.assignmentp.viewmodel.SignupViewModel" />
        <variable
            name="clickhandller"
            type="com.p.assignmentp.view.SignupActivity.ClickHandler" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner_full"
    tools:context=".view.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:maxLines="1"
                android:inputType="text"
                android:layout_margin="10dp"
                android:text="@={model.nameLiveData}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            app:hintEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@color/white"
                android:inputType="text"
                android:layout_margin="10dp"
                android:text="@={model.lastNameLiveData}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:text="@={model.emailLiveData}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@color/white"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:text="@={model.passwordLiveData}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:hintEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@color/white"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:text="@={model.confirmPasswordLiveData}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginPasswordButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:onClick="@{clickhandller::register}"
            android:background="@drawable/rounded_corner"
            android:foreground="@drawable/ripple_effect"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
